--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="40dp"
             android:hint="@string/hint_message"
             android:maxLines="3"
-            android:text="@={data.content}"
+            android:text="@{data.content}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <Button
@@ -38,6 +38,5 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/button_launch_tab_activity" />
-
     </LinearLayout>
 </layout>
