--- a/app/src/main/res/layout/fragment_bundle.xml
+++ b/app/src/main/res/layout/fragment_bundle.xml
@@ -1,24 +1,34 @@
 <layout>
 
     <data>
+
         <variable
             name="message"
             type="String" />
     </data>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:padding="20dp">
 
         <TextView
-            android:id="@+id/textview_message"
+            android:id="@+id/textView_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:layout_gravity="center_horizontal"
             android:text="@{message ?? @string/empty_string}"
-            tools:text="Sample data"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            tools:text="Sample data" />
 
-    </FrameLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
+            android:background="@color/colorPrimaryDark" />
+    </LinearLayout>
 </layout>
