sample for retrofit

--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -8,6 +8,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
-        tools:context="com.pointclickcare.brian.bundletest.ui.recyclerview.RecyclerViewExampleFragment"
-        tools:listitem="@layout/fragment_item" />
+        tools:context="com.pointclickcare.brian.bundletest.ui.recyclerview.RecyclerViewExampleFragment" />
 </layout>
